loggong and exception

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2909,6 +2909,13 @@
       "Standard Deviation:  0.0\n",
       "perfomance on test data cross val score : \n",
       "\n",
+      "\n",
+      "Scores:  [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "Mean:  1.0\n",
+      "Standard Deviation:  0.0\n",
+      "auc : 0.9523809523809523\n",
+      "=============================================\n",
+      "\n",
       "\n"
      ]
     }
@@ -2983,7 +2990,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
